# revents

./: .gitignore  Cargo.toml  README.md  agenda.json  config.toml
src/: agenda.json  app.rs  config.rs  file_picker.rs  lib.rs  main.rs  model.rs  notifiche.rs  ui.rs
