[package]
name = "revents"
version = "0.1.0"
edition = "2024"
default-run = "revents"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
notify-rust = "4.11.0"
rodio = "0.17"
